--- a/inst/doc/biblio.bib
+++ b/inst/doc/biblio.bib
@@ -73,6 +73,18 @@
   number = {5}
 }
 
+@ARTICLE{Baccini2007csda,
+  author = {Baccini, M. and Biggeri, A. and Lagazio, C. and Lertxundi, A. and
+	Saez, M.},
+  title = {{Parametric and semi-parametric approaches in the analysis of short-term
+	effects of air pollution on health}},
+  journal = {Computational Statistics and Data Analysis},
+  year = {2007},
+  volume = {51},
+  pages = {4324-4336},
+  number = {9}
+}
+
 @ARTICLE{ballester1997,
   author = {Ballester, F. and Corella, D. and Perez-Hoyos, S. and Saez, M. and
 	Hervas, A.},
@@ -83,6 +95,17 @@
   volume = {26},
   pages = {551-61},
   number = {3}
+}
+
+@ARTICLE{basu2009eh,
+  author = {Basu, R.},
+  title = {High ambient temperature and mortality: a review of epidemiological
+	studies from 2001 to 2008},
+  journal = {Environ Health},
+  year = {2009},
+  volume = {8},
+  pages = {40},
+  number = {1}
 }
 
 @ARTICLE{basu2005,
@@ -138,6 +161,17 @@
   volume = {16},
   pages = {436-45},
   number = {4}
+}
+
+@ARTICLE{Bell2009,
+  author = {Bell, M. L. and Ebisu, K. and Peng, R. D. and Dominici, F.},
+  title = {{Adverse health effects of particulate air pollution: modification
+	by air conditioning}},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {682-686},
+  number = {5}
 }
 
 @ARTICLE{bell2007,
@@ -226,6 +260,29 @@
   pages = {395--411},
   number = {4},
   publisher = {Wiley Subscription Services, Inc., A Wiley Company Chichester}
+}
+
+@ARTICLE{Berlin1993,
+  author = {Berlin, J. A. and Longnecker, M. P. and Greenland, S.},
+  title = {{Meta-analysis of epidemiologic dose-response data}},
+  journal = {Epidemiology},
+  year = {1993},
+  volume = {4},
+  pages = {218-28},
+  number = {3}
+}
+
+@ARTICLE{Berlin2002,
+  author = {Berlin, J. A. and Santanna, J. and Schmid, C. H. and Szczech, L.
+	A. and Feldman, H. I.},
+  title = {{Individual patient- versus group-level data meta-regressions for
+	the investigation of treatment effect modifiers: ecological bias
+	rears its ugly head}},
+  journal = {Stat Med},
+  year = {2002},
+  volume = {21},
+  pages = {371-87},
+  number = {3}
 }
 
 @ARTICLE{biggeri2004,
@@ -400,6 +457,25 @@
   number = {2}
 }
 
+@ARTICLE{coull2001biom,
+  author = {Coull, B. A. and Ruppert, D. and Wand, M. P.},
+  title = {{Simple incorporation of interactions into additive models}, journal
+	= {Biometrics}},
+  year = {2001},
+  volume = {57},
+  pages = {539-45},
+  number = {2}
+}
+
+@ARTICLE{coull2001biostat,
+  author = {Coull, B. A. and Schwartz, J. and Wand, M. P.},
+  title = {{Respiratory health and air pollution: additive mixed model analyses}},
+  journal = {Biostatistics},
+  year = {2001},
+  volume = {2},
+  pages = {337-49}
+}
+
 @ARTICLE{crainiceanu2008biomet,
   author = {Crainiceanu, C.M. and Dominici, F. and Parmigiani, G.},
   title = {{Adjustment uncertainty in effect estimation}},
@@ -533,6 +609,31 @@
   number = {94 Pt 3}
 }
 
+@ARTICLE{Darrow2009a,
+  author = {Darrow, L. A. and Klein, M. and Flanders, W. D. and Waller, L. A.
+	and Correa, A. and Marcus, M. and Mulholland, J. A. and Russell,
+	A. G. and Tolbert, P. E.},
+  title = {Ambient Air Pollution and Preterm Birth: A Time-series Analysis},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {689-698},
+  number = {5}
+}
+
+@ARTICLE{Darrow2009,
+  author = {Darrow, L. A. and Strickland, M. J. and Klein, M. and Waller, L.
+	A. and Flanders, W. D. and Correa, A. and Marcus, M. and Tolbert,
+	P. E.},
+  title = {Seasonality of Birth and Implications for Temporal Studies of Preterm
+	Birth},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {699-706},
+  number = {5}
+}
+
 @ARTICLE{dear2005,
   author = {Dear, K. and Ranmuthugala, G. and Kjellstrom, T. and Skinner, C.
 	and Hanigan, I.},
@@ -598,6 +699,18 @@
   volume = {16},
   pages = {600},
   number = {6}
+}
+
+@ARTICLE{dockery1993,
+  author = {Dockery, D. W. and Pope, C. A., 3rd and Xu, X. and Spengler, J. D.
+	and Ware, J. H. and Fay, M. E. and Ferris, B. G., Jr. and Speizer,
+	F. E.},
+  title = {{An association between air pollution and mortality in six U.S. cities}},
+  journal = {N Engl J Med},
+  year = {1993},
+  volume = {329},
+  pages = {1753-9},
+  number = {24}
 }
 
 @ARTICLE{dominici2004rrhef,
@@ -813,6 +926,50 @@
   pages = {89-101}
 }
 
+@ARTICLE{elliott2007thorax,
+  author = {Elliott, P. and Shaddick, G. and Wakefield, J. C. and de Hoogh, C.
+	and Briggs, D. J.},
+  title = {{Long-term associations of outdoor air pollution with mortality in
+	Great Britain}},
+  journal = {Thorax},
+  year = {2007},
+  volume = {62},
+  pages = {1088-94},
+  number = {12}
+}
+
+@ARTICLE{farrington1996aje,
+  author = {Farrington, C. P. and Nash, J. and Miller, E.},
+  title = {{Case series analysis of adverse reactions to vaccines: a comparative
+	evaluation}},
+  journal = {Am J Epidemiol},
+  year = {1996},
+  volume = {143},
+  pages = {1165-73},
+  number = {11}
+}
+
+@ARTICLE{farrington2006applstat,
+  author = {Farrington, C. P. and Whitaker, H. J.},
+  title = {{Semiparametric analysis of case series data}},
+  journal = {Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+  year = {2006},
+  volume = {55},
+  pages = {553-594},
+  number = {5}
+}
+
+@ARTICLE{farrington2009biostat,
+  author = {Farrington, C. P. and Whitaker, H. J. and Hocine, M. N.},
+  title = {{Case series analysis for censored, perturbed, or curtailed post-event
+	exposures}},
+  journal = {Biostatistics},
+  year = {2009},
+  volume = {10},
+  pages = {3-16},
+  number = {1}
+}
+
 @ARTICLE{filleul2004,
   author = {Filleul, L. and Le Tertre, A. and Baldi, I. and Tessier, J. F.},
   title = {{Difference in the relation between daily mortality and air pollution
@@ -898,10 +1055,9 @@
   number = {13-14}
 }
 
-@ARTICLE{gasparrini2009biostat,
+@ARTICLE{gasparrini2009sub,
   author = {Gasparrini, A. and Armstrong, B. and Kenward M. G.},
   title = {{Distributed lag non-linear models}},
-  journal = {Biostatistcs},
   volume = {in submission}
 }
 
@@ -911,8 +1067,9 @@
 	myocardial infarction}},
   journal = {Eur J Epidemiol},
   year = {2009},
-  pages = {DOI: 10.1007/s10654-009-9377-0},
-  number = {In press}
+  pages = {597-602},
+  volume = {24},
+  number = {10}
 }
 
 @ARTICLE{gilliland2001,
@@ -1072,6 +1229,28 @@
   number = {2}
 }
 
+@ARTICLE{hardy1996statmed,
+  author = {Hardy, R. J. and Thompson, S. G.},
+  title = {{A likelihood approach to meta-analysis with random effects}},
+  journal = {Stat Med},
+  year = {1996},
+  volume = {15},
+  pages = {619-29},
+  number = {6}
+}
+
+@ARTICLE{hoek2002lancet,
+  author = {Hoek, G. and Brunekreef, B. and Goldbohm, S. and Fischer, P. and
+	van den Brandt, P. A.},
+  title = {{Association between mortality and indicators of traffic-related
+	air pollution in the Netherlands: a cohort study}},
+  journal = {Lancet},
+  year = {2002},
+  volume = {360},
+  pages = {1203-9},
+  number = {9341}
+}
+
 @ARTICLE{hoffmann2008,
   author = {Hoffmann, B. and Hertel, S. and Boes, T. and Weiland, D. and Jockel,
 	K. H.},
@@ -1115,6 +1294,17 @@
   year = {2001},
   volume = {109},
   pages = {463-70},
+  number = {5}
+}
+
+@ARTICLE{ishak2007clintrials,
+  author = {Ishak, K. J. and Platt, R. W. and Joseph, L. and Hanley, J. A. and
+	Caro, J. J.},
+  title = {{Meta-analysis of longitudinal studies}},
+  journal = {Clin Trials},
+  year = {2007},
+  volume = {4},
+  pages = {525-39},
   number = {5}
 }
 
@@ -1221,6 +1411,17 @@
   number = {1}
 }
 
+@ARTICLE{kinney2008esp,
+  author = {Kinney, P. L. and O'Neill, M. S. and Bell, M. L. and Schwartz, J.},
+  title = {Approaches for estimating effects of climate change on heat-related
+	deaths: challenges and opportunities},
+  journal = {Environ Sci Policy},
+  year = {2008},
+  volume = {11},
+  pages = {87-96},
+  number = {1}
+}
+
 @ARTICLE{kovats2008,
   author = {Kovats, R. S. and Hajat, S.},
   title = {{Heat stress and public health: a critical review}},
@@ -1238,6 +1439,18 @@
   year = {2004},
   volume = {61},
   pages = {893-8},
+  number = {11}
+}
+
+@ARTICLE{kunzli2001aje,
+  author = {Kunzli, N. and Medina, S. and Kaiser, R. and Quenel, P. and Horak,
+	F., Jr. and Studnicka, M.},
+  title = {{Assessment of deaths attributable to air pollution: should we use
+	risk estimates based on time series or on cohort studies?}},
+  journal = {Am J Epidemiol},
+  year = {2001},
+  volume = {153},
+  pages = {1050-5},
   number = {11}
 }
 
@@ -1260,6 +1473,17 @@
   volume = {52},
   pages = {105-16},
   number = {3}
+}
+
+@ARTICLE{laden2006ajrccm,
+  author = {Laden, F. and Schwartz, J. and Speizer, F. E. and Dockery, D. W.},
+  title = {{Reduction in fine particulate air pollution and mortality: extended
+	follow-up of the Harvard Six Cities study}},
+  journal = {Am J Respir Crit Care Med},
+  year = {2006},
+  volume = {173},
+  pages = {667-72},
+  number = {6}
 }
 
 @ARTICLE{letertre2006,
@@ -1296,6 +1520,18 @@
   volume = {12},
   pages = {186-92},
   number = {2}
+}
+
+@ARTICLE{Lin2009,
+  author = {Lin, S. and Luo, M. and Walker, R. J. and Liu, X. and Hwang, S. A.
+	and Chinery, R.},
+  title = {{Extreme high temperatures and hospital admissions for respiratory
+	and cardiovascular diseases}},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {738-746},
+  number = {5}
 }
 
 @ARTICLE{lumley2000,
@@ -1362,6 +1598,18 @@
   year = {2001},
   volume = {109(Suppl 2)},
   pages = {185-9}
+}
+
+@ARTICLE{mcmichael1998ije,
+  author = {McMichael, A. J. and Anderson, H. R. and Brunekreef, B. and Cohen,
+	A. J.},
+  title = {{Inappropriate use of daily mortality analyses to estimate longer-term
+	mortality effects of air pollution}},
+  journal = {Int J Epidemiol},
+  year = {1998},
+  volume = {27},
+  pages = {450-3},
+  number = {3}
 }
 
 @ARTICLE{mcmichael2008,
@@ -1466,6 +1714,14 @@
   number = {19}
 }
 
+@ARTICLE{muggeo2002graspa,
+  author = {Muggeo, V. M. R. and Lovison, G.},
+  title = {{Mortality, temperature and air pollution in Palermo, Italy}},
+  journal = {GRASPA Working Papers},
+  year = {2002},
+  pages = {http://www.graspa.org/Graspa\_eng/Default.asp}
+}
+
 @ARTICLE{murray2000,
   author = {Murray, C. J. and Nelson, C. R.},
   title = {{State-space modeling of the relationship between air quality and
@@ -1475,6 +1731,16 @@
   volume = {50},
   pages = {1075-80},
   number = {7}
+}
+
+@ARTICLE{musonda2006statmed,
+  author = {Musonda, P. and Farrington, C. P. and Whitaker, H. J.},
+  title = {{Sample sizes for self-controlled case series studies}},
+  journal = {Stat Med},
+  year = {2006},
+  volume = {25},
+  pages = {2618-31},
+  number = {15}
 }
 
 @ARTICLE{nafstad2001,
@@ -1547,7 +1813,7 @@
 	study in air pollutioon and health}},
   publisher = {Springer-Verlag},
   year = {2008},
-  author = {Peng, R. D. and dominici, F.},
+  author = {Peng, R. D. and Dominici, F.},
   series = {Use R!},
   address = {New York}
 }
@@ -1597,14 +1863,32 @@
   pages = {10}
 }
 
-@ARTICLE{pope2007,
-  author = {Pope, C. A., 3rd},
-  title = {{Mortality effects of longer term exposures to fine particulate air
-	pollution: review of recent epidemiological evidence}},
-  journal = {Inhal Toxicol},
-  year = {2007},
-  volume = {19 Suppl 1},
-  pages = {33-8}
+@ARTICLE{peters2002lancet,
+  author = {Peters, A. and Pope, C. A., 3rd},
+  title = {{Cardiopulmonary mortality and air pollution}},
+  journal = {Lancet},
+  year = {2002},
+  volume = {360},
+  pages = {1184-5},
+  number = {9341},
+  note = {Peters, Annette Pope, C Arden 3rd Comment England Lancet Lancet.
+	2002 Oct 19;360(9341):1184-5.},
+  keywords = {Aged Female Hazardous Substances/*adverse effects Humans Life Expectancy
+	Male Middle Aged Netherlands/epidemiology Respiratory Tract Diseases/*chemically
+	induced/*mortality Risk Assessment Risk Factors Socioeconomic Factors
+	Vehicle Emissions/*adverse effects}
+}
+
+@ARTICLE{pope2002jama,
+  author = {Pope, C. A., 3rd and Burnett, R. T. and Thun, M. J. and Calle, E.
+	E. and Krewski, D. and Ito, K. and Thurston, G. D.},
+  title = {{Lung cancer, cardiopulmonary mortality, and long-term exposure to
+	fine particulate air pollution}},
+  journal = {Jama},
+  year = {2002},
+  volume = {287},
+  pages = {1132-41},
+  number = {9}
 }
 
 @ARTICLE{poumadere2005,
@@ -1616,16 +1900,6 @@
   volume = {25},
   pages = {1483-94},
   number = {6}
-}
-
-@MANUAL{R,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Development Core Team}},
-  organization = {{R Foundation for Statistical Computing}},
-  address = {Vienna, Austria},
-  year = {2008},
-  note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org}
 }
 
 @ARTICLE{rabl2006,
@@ -1849,6 +2123,16 @@
   year = {2000}
 }
 
+@ARTICLE{samoli2009jech,
+  author = {Samoli, E. and Zanobetti, A. and Schwartz, J. and Atkinson, R. and
+	Le Tertre, A. and Schindler, C. and Perez, L. and Cadum, E. and Pekkanen,
+	J. and Paldy, A. and Touloumi, G. and Katsouyanni, K.},
+  title = {{The temporal pattern of mortality responses to ambient ozone in
+	the APHEA project}},
+  journal = {J Epidemiol Community Health},
+  year = {2009}
+}
+
 @ARTICLE{schwartz2001epi,
   author = {Schwartz, J.},
   title = {{Is there harvesting in the association of airborne particles with
@@ -2028,6 +2312,18 @@
   number = {3}
 }
 
+@ARTICLE{stafoggia2009epi,
+  author = {Stafoggia, M. and Forastiere, F. and Michelozzi, P. and Perucci,
+	C. A.},
+  title = {{Summer temperature-related mortality: effect modification by previous
+	winter mortality}},
+  journal = {Epidemiology},
+  year = {2009},
+  volume = {20},
+  pages = {575-83},
+  number = {4}
+}
+
 @ARTICLE{stafoggia2008aje,
   author = {Stafoggia, M. and Schwartz, J. and Forastiere, F. and Perucci, C.
 	A.},
@@ -2052,6 +2348,26 @@
   number = {8}
 }
 
+@ARTICLE{sutton2008statmed,
+  author = {Sutton, A. J. and Higgins, J. P.},
+  title = {Recent developments in meta-analysis},
+  journal = {Stat Med},
+  year = {2008},
+  volume = {27},
+  pages = {625-50},
+  number = {5}
+}
+
+@MANUAL{R,
+  title = {{R: a language and environment for statistical computing}},
+  author = {R Development Core Team},
+  organization = {{R Foundation for Statistical Computing}},
+  address = {Vienna, Austria},
+  year = {2008},
+  note = {{ISBN} 3-900051-07-0},
+  url = {http://www.R-project.org}
+}
+
 @ARTICLE{thomas2005,
   author = {Thomas, D.},
   title = {{Why do estimates of the acute and chronic effects of air pollution
@@ -2061,6 +2377,27 @@
   volume = {68},
   pages = {1167-74},
   number = {13-14}
+}
+
+@ARTICLE{thompson1999statmed,
+  author = {Thompson, S. G. and Sharp, S. J.},
+  title = {{Explaining heterogeneity in meta-analysis: a comparison of methods}},
+  journal = {Stat Med},
+  year = {1999},
+  volume = {18},
+  pages = {2693-708},
+  number = {20}
+}
+
+@ARTICLE{thompson2001smmr,
+  author = {Thompson, S. G. and Turner, R. M. and Warn, D. E.},
+  title = {{Multilevel models for meta-analysis, and their application to absolute
+	risk differences}},
+  journal = {Stat Methods Med Res},
+  year = {2001},
+  volume = {10},
+  pages = {375-92},
+  number = {6}
 }
 
 @ARTICLE{toulemon2008,
@@ -2099,6 +2436,16 @@
   number = {1}
 }
 
+@ARTICLE{verbyla1999applstat,
+  author = {Verbyla, A. P. and Cullis, B. R. and Kenward, M. G. and Welham, S.
+	J.},
+  title = {{The analysis of designed experiments and longitudinal data by using
+	smoothing splines}},
+  journal = {Applied Statistics},
+  year = {1999},
+  pages = {269-311}
+}
+
 @ARTICLE{vigotti1999,
   author = {Vigotti, M. A.},
   title = {{[Short-term effects of exposure to urban air pollution on human
@@ -2109,6 +2456,27 @@
   volume = {23},
   pages = {408-15},
   number = {4}
+}
+
+@ARTICLE{vines2001statmed,
+  author = {Vines, S. K. and Farrington, C. P.},
+  title = {{Within-subject exposure dependency in case-crossover studies}},
+  journal = {Stat Med},
+  year = {2001},
+  volume = {20},
+  pages = {3039-49},
+  number = {20}
+}
+
+@ARTICLE{warn2002statmed,
+  author = {Warn, D. E. and Thompson, S. G. and Spiegelhalter, D. J.},
+  title = {{Bayesian random effects meta-analysis of trials with binary outcomes:
+	methods for the absolute risk difference and relative risk scales}},
+  journal = {Stat Med},
+  year = {2002},
+  volume = {21},
+  pages = {1601-23},
+  number = {11}
 }
 
 @ARTICLE{wellenius2005,
@@ -2141,6 +2509,27 @@
   year = {2005},
   volume = {162},
   pages = {80-8},
+  number = {1}
+}
+
+@ARTICLE{whitaker2006statmed,
+  author = {Whitaker, H. J. and Farrington, C. P. and Spiessens, B. and Musonda,
+	P.},
+  title = {{Tutorial in biostatistics: the self-controlled case series method}},
+  journal = {Stat Med},
+  year = {2006},
+  volume = {25},
+  pages = {1768-97},
+  number = {10}
+}
+
+@ARTICLE{whitaker2009smmr,
+  author = {Whitaker, H. J. and Hocine, M. N. and Farrington, C. P.},
+  title = {{The methodology of self-controlled case series studies}},
+  journal = {Stat Methods Med Res},
+  year = {2009},
+  volume = {18},
+  pages = {7-26},
   number = {1}
 }
 
@@ -2272,5 +2661,12 @@
   year = {2006},
   volume = {27},
   pages = {57-79}
+}
+
+@ARTICLE{NMMAPS,
+  title = {{Internet-based Health and Air Pollution Surveillance System (iHAPSS).
+	Mortality, air pollution, and meteorological data for 108 US cities
+	1987{–}2000}},
+  pages = {http://www.ihapss.jhsph.edu}
 }
 
