--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,12 @@
+Changes in dlnm 1.1.1
+=======================
+
+Minor changes
+-------------
+
+    o	Bug in mkbasis() with 'type="strata"': fixed.
+
+
 Changes in dlnm 1.1.0
 =======================
 
